# helloworld_ioc

./: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  calculatorform.cpp  calculatorform.h  calculatorform.ui
